# mangataro-downloader

./: README.md  pyproject.toml
mangataro/: __init__.py  __main__.py  cli.py  config.py  engine.py  export.py  gui.py  history.py  interactive.py  models.py  search.py  themes.py
