[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mangataro"
version = "1.0.0"
description = "Download and manage manga from MangaTaro.org"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "xYui"},
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "pyqt6>=6.11.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0"]

[project.scripts]
mangataro = "mangataro.cli:main"
mangataro-gui = "mangataro.gui:main"

[tool.setuptools.packages.find]
include = ["mangataro*"]
